Доделал настройки и синхронизацию времени Сделал настройку цикличного опроса уровнемеров с игнорированием ошибок

--- a/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
+++ b/src/ru/sid/izk/modbus/frames/IZKModbusGUI.form
@@ -1656,7 +1656,15 @@
                 </constraints>
                 <properties/>
                 <border type="none"/>
-                <children/>
+                <children>
+                  <vspacer id="a3f6">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                        <preferred-size width="-1" height="300"/>
+                      </grid>
+                    </constraints>
+                  </vspacer>
+                </children>
               </grid>
               <grid id="c7459" layout-manager="GridLayoutManager" row-count="3" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
@@ -1728,7 +1736,7 @@
                   <component id="1a26d" class="javax.swing.JTextField" binding="dayWriteTextField">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -1738,7 +1746,7 @@
                   <component id="4fb74" class="javax.swing.JTextField" binding="monthWriteTextField">
                     <constraints>
                       <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -1746,7 +1754,7 @@
                   <component id="39a3b" class="javax.swing.JTextField" binding="yearWriteTextField">
                     <constraints>
                       <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -1754,7 +1762,7 @@
                   <component id="e39bc" class="javax.swing.JTextField" binding="hourWriteTextField">
                     <constraints>
                       <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -1762,7 +1770,7 @@
                   <component id="6f66f" class="javax.swing.JTextField" binding="minuteWriteTextField">
                     <constraints>
                       <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
@@ -1770,10 +1778,21 @@
                   <component id="896f8" class="javax.swing.JTextField" binding="secondWriteTextField">
                     <constraints>
                       <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
-                        <preferred-size width="100" height="-1"/>
+                        <preferred-size width="50" height="-1"/>
                       </grid>
                     </constraints>
                     <properties/>
+                  </component>
+                  <component id="74053" class="javax.swing.JButton" binding="synchronizeTimeButton">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="150" height="30"/>
+                        <maximum-size width="150" height="30"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <text value="Синхронизировать"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
